--- a/服务器数据和文件备份.md
+++ b/服务器数据和文件备份.md
@@ -1,9 +1,10 @@
-  #!/bin/bash
-  Now=$(date +'%d-%m-%Y--%H:%M:%S')
-  File=backup-$Now.sql
-  gz=backup-$Now.tar.gz
-  /usr/bin/mysqldump -h120.27.78.202 -P3618 -uroot -p'CQyc6820' yichen3_0 > /data/backup/data_yichen3_0/yichen3_0-$File
+  # shell  
+    #!/bin/bash
+    Now=$(date +'%d-%m-%Y--%H:%M:%S')
+    File=backup-$Now.sql
+    gz=backup-$Now.tar.gz
+    /usr/bin/mysqldump -h120.27.78.202 -P3618 -uroot -p'CQyc6820' yichen3_0 > /data/backup/data_yichen3_0/yichen3_0-$File
 
-  /bin/tar zcvf /data/backup/data_yichen3_0/yichen3_0-$gz /data/www/yichen3_0
+    /bin/tar zcvf /data/backup/data_yichen3_0/yichen3_0-$gz /data/www/yichen3_0
 
-  find /data/backup/data_yichen3_0/ -mtime +10 -exec rm -f {} \;
+    find /data/backup/data_yichen3_0/ -mtime +10 -exec rm -f {} \;
